fix overflow on xs screens -galaxy fold-

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -124,6 +124,14 @@ footer {
     margin-right: 20px;
 }
 
+
+.list-unstyled {
+    padding-left: 0;
+    padding-right: 5px;
+    list-style: none;
+    overflow: auto;
+}
+
 /* Cards */
 .card {
     align-items: center;
